Fix active badge z-index overlapping bug on skin card

--- a/css/characters.css
+++ b/css/characters.css
@@ -81,6 +81,7 @@
   position: absolute;
   top: var(--sp-3);
   right: var(--sp-3);
+  z-index: 10;
 }
 
 /* ===== SKIN CARD ===== */
